# ai-infra

./: .env  .gitignore  README.md  Tr2asncr.py  azure.yml  call_monitoring.py  call_transcriber_app.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: master_ai-backend-infra.yml  master_ai-infra.yml
app/: api.py  db_init.py  kafka_consumer.py  main.py
app/core/: config.py  dependencies.py  lifespan.py  middleware.py  openai_client.py
app/core/database/: mongodb.py
app/middleware/: __init__.py  request_logging.py
app/modules/: __init__.py
app/modules/asr/: __init__.py  cron.py  routes.py  schemas.py  service.py  tag_service.py
app/modules/asr/queries/: __init__.py  reset_call_tags.py
app/modules/eventhub/: __init__.py  service.py
app/modules/recording/: __init__.py  routes.py  schemas.py  service.py
app/modules/servicebus/: __init__.py  dev_listener.py  listener.py  models.py  sender.py  worker.py
app/modules/transcription/: __init__.py  job_processor.py  models.py  routes.py  schemas.py  service.py
app/modules/user/: models.py  routes.py  schemas.py  service.py
app/ringcentral/: authtoken.py  client.py  service.py
app/services/: __init__.py  scheduler.py
app/services/azure/: service_bus.py
app/services/azure/openai/: whisper_rateLimiter.py
app/services/openai/: local_whisper.py
examples/servicebus-sender/: package.json  tsconfig.json
examples/servicebus-sender/src/: send.ts
tests/: test_asr_structured_transcript.py  test_asr_transcribe_url.py  test_eventhub.py  test_servicebus.py
